[package]
name = "ctranspiler"
version = "0.1.0"
authors = ["gpi <gpimpale29@gmail.com>"]
edition = "2021"

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
num-bigint =  { version = "0.4.5", features = ["serde"] }
num-rational = { version = "0.4.2", features = ["serde"] }
num-traits = "0.2.19"
lsp-types = "0.96.0"
peekmore = "1.3.0"
strum = { version = "0.26.2", features = ["derive"] }
bumpalo = { version = "3.16.0", features = ["allocator_api"] }
hashbrown = { version = "0.14.5", features = ["nightly"] }
indexmap = "2.2.6"